#2: Fixed review findings.