@@ -13,16 +13,17 @@ import org.xml.sax.SAXException;
 
 import javax.xml.parsers.DocumentBuilder;
 import javax.xml.parsers.DocumentBuilderFactory;
+import javax.xml.XMLConstants;
 import javax.xml.parsers.ParserConfigurationException;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 
 /**
  * The SummarizerMojo class is a Maven plugin goal that performs quality metric summarization.
  * <p>
- * It implements the Mojo interface and extends the AbstractMojo class. The goal "summarize" and runs in the default
- * phase "VERIFY".
+ * The goal "summarize" and runs in the default phase "VERIFY".
  * </p>
  */
 // [impl -> dsn~maven-plugin~1]
@@ -41,8 +42,8 @@ public class SummarizerMojo extends AbstractMojo {
         try {
             summarize();
         } catch (final Exception exception) {
-            getLog().warn("The following issue occurred during quality metric summarization: '" + exception.getMessage()
-                    + "'. Continuing build since this step is optional.");
+            getLog().warn("The following issue occurred during quality metric summarization."
+                    + " Continuing build since this step is optional.", exception);
         }
     }
 
@@ -57,7 +58,7 @@ public class SummarizerMojo extends AbstractMojo {
         return Path.of(project.getBuild().getDirectory());
     }
 
-    // [impl -> dsn~extracting-code-coverage-from-ja-co-co-report~1]
+    // [impl -> dsn~extracting-code-coverage-from-jacoco-report~1]
     private float extractCoverageFromJaCoCoXML(final Path jacocoXMLPath) throws MojoFailureException {
         try {
             final Document document = getXMLDocument(jacocoXMLPath);
@@ -82,20 +83,50 @@ public class SummarizerMojo extends AbstractMojo {
         final int coveredBranches = Integer.parseInt(counterNode.getAttribute("covered"));
         final int allBranches = missedBranches + coveredBranches;
         float branchCoveragePercentage = coveredBranches * 100.0f / allBranches;
-        getLog().debug("Branch coverage is " + branchCoveragePercentage + ". " + coveredBranches + " of " + allBranches
+        getLog().debug("Branch coverage is " + branchCoveragePercentage + "%. " + coveredBranches + " of " + allBranches
                 + " covered.");
         return branchCoveragePercentage;
     }
 
     private static Document getXMLDocument(Path jacocoXMLPath)
             throws ParserConfigurationException, SAXException, IOException {
-        final DocumentBuilderFactory documentBuilderFactory = DocumentBuilderFactory.newInstance();
+        final DocumentBuilderFactory documentBuilderFactory = createSecureDocumentBuilderFactory();
         final DocumentBuilder documentBuilder = documentBuilderFactory.newDocumentBuilder();
         final Document document = documentBuilder.parse(Files.newInputStream(jacocoXMLPath));
         document.getDocumentElement().normalize();
         return document;
     }
 
+    /**
+     * Create a secure {@link DocumentBuilderFactory}.
+     * <ul>
+     * <li>XML secure processing enabled</li>
+     * <li>Unnecessary features disabled</li>
+     * <li>Resource limits tightened</li>
+     * </ul>
+     *
+     * @see <a href="https://docs.oracle.com/javase/8/docs/technotes/guides/security/jaxp/jaxp.html">Java API for XML
+     *      Processing (JAXP) Security Guide</a>
+     * @return a secure DocumentBuilderFactory instance
+     * @throws ParserConfigurationException if a DocumentBuilderFactory cannot be created
+     */
+    private static DocumentBuilderFactory createSecureDocumentBuilderFactory() throws ParserConfigurationException {
+        final DocumentBuilderFactory documentBuilderFactory = DocumentBuilderFactory.newInstance();
+        // While secure processing is on by default we have this here to be explicit:
+        documentBuilderFactory.setFeature(XMLConstants.FEATURE_SECURE_PROCESSING, true);
+        // JaCoCo reports follow a DTD, so we can disable external schemas and stylesheet:
+        documentBuilderFactory.setFeature(XMLConstants.ACCESS_EXTERNAL_SCHEMA, false);
+        documentBuilderFactory.setFeature(XMLConstants.ACCESS_EXTERNAL_STYLESHEET, false);
+        // Disallow inline DTDs:
+        documentBuilderFactory.setFeature("http://apache.org/xml/features/disallow-doctype-decl", true);
+        // Tighten size limits:
+        documentBuilderFactory.setAttribute("http://www.oracle.com/xml/jaxp/properties/elementAttributeLimit", 100);
+        documentBuilderFactory.setAttribute("http://www.oracle.com/xml/jaxp/properties/maxElementDepth", 0);
+        documentBuilderFactory.setAttribute("http://www.oracle.com/xml/jaxp/properties/totalEntitySizeLimit", 5000);
+        documentBuilderFactory.setAttribute("http://www.oracle.com/xml/jaxp/properties/maxEntitySizeLimit", 5000);
+        documentBuilderFactory.setAttribute("http://www.oracle.com/xml/jaxp/properties/entityReplacementLimit", 10000);
+        return documentBuilderFactory;
+    }
 
     // [impl -> dsn~metric-output-file~1]
     private void writeSummaryFile(Path mavenTargetPath, float coverage) throws MojoFailureException {
@@ -103,7 +134,7 @@ public class SummarizerMojo extends AbstractMojo {
         getLog().debug("Writing quality summary file to '" + summaryFilePath + "'");
         final String summary = generateSummaryJSON(coverage);
         try {
-            Files.write(summaryFilePath, summary.getBytes());
+            Files.writeString(summaryFilePath, summary);
         } catch (IOException exception) {
             throw new MojoFailureException("Unable to write quality summary file: " + summaryFilePath, exception);
         }
